[package]
name = "apex-solana"
version = "0.1.0"
edition = "2021"
description = "Solana port of the APEX registries"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "apex_solana"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true, features = ["token"] }
